# Audio2Text

./: .gitignore  CHANGELOG.md  LICENSE  README.md  build.py  build.sh  pyproject.toml  requirements.txt  setup.py
src/: audio_converter.py  main.py  main_window.py  version.py
tests/: conftest.py  test_audio_converter.py  test_main_window.py
