[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "audio2text"
version = "1.0.0"
authors = [
  { name="Liv", email="liv@example.com" },
]
description = "Une application de conversion audio en texte avec interface graphique"
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "PyQt6>=6.8.0",
    "pydub>=0.25.1",
    "SpeechRecognition>=3.10.0",
    "python-docx>=0.8.11",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/audio2text"
"Bug Tracker" = "https://github.com/yourusername/audio2text/issues"

[project.scripts]
audio2text = "src.main:main"
