[tool.poetry]
name = "audio2text"
version = "1.1.0"
description = "Une application de conversion audio en texte avec interface graphique"
authors = ["Liv <liv@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
PyQt6 = "^6.6.1"
pytest = "^7.4.3"
pytest-qt = "^4.2.0"
pytest-asyncio = "^0.23.2"
SpeechRecognition = "^3.10.1"
pydub = "^0.25.1"
gTTS = "^2.4.0"
psutil = "^5.9.7"
memory-profiler = "^0.61.0"
numpy = "^1.21.0"
ffmpeg-python = "^0.2.0"
python-docx = "^0.8.11"

[tool.poetry.group.dev.dependencies]
black = "^23.0.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
audio2text = "src.main:main"
